# ChaTTY

./: .gitignore  CMakeLists.txt  README.md
client/: client.c  client.cpp  client.h  client.hpp  main.c  main.cpp  ui.c  ui.cpp  ui.h  ui.hpp
common/: ChaTTY_common.h  ChaTTY_packets.h
server/: main.c  main.cpp  motd.txt  server.c  server.h  server.hpp  server_event_handle.cpp  server_init.c  server_init.cpp  server_poll.c  server_poll.cpp  server_transport.cpp
src/: main.c  main.cpp
